# tc-variant-annotation-client

./: CHALLENGE-README.md  README.md  pyproject.toml  test_script.py
client/: client.py
tests/: test_client.py  util.py
tvac/: cli.py  client.py
