[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-variant-annotation-client"
version = "0.0.1"
authors = [
  { name="Nobel Yoo", email="nobr@nobr.me" },
]
description = "A package for annotating variants"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.scripts]
tvac = "tvac.cli:cli_annotate_variants"
